[tool.poetry]
name = "pdfbuilder"
version = "0.1.0"
description = ""
authors = ["Marion Vasseur <23618241+Mari0nV@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wkhtmltopdf = "^0.2"
fastapi = "^0.75.2"
boto3 = "^1.22.0"
markdown2 = "^2.4.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
